<resources>
    <string name="app_name">My fantastic University</string>
    <string name="login_text">Login</string>
    <string name="orar">Orar</string>
    <string name="harta">Harta</string>
    <string name="chat">Chat</string>
    <string name="examene">Examene</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="Nume_utilizator">Nume utilizator</string>
    <string name="Setari">Setari cont</string>
    <string name="notificatii">Notificări</string>
    <string name="Adauga_cont">Adaugă cont</string>
    <string name="ajutor">Ajutor</string>
    <string name="Logout">Ieșire</string>
    <string name="exam_text">exam_text</string>
    <string name="denumirea_cursului">Denumirea cursului</string>
    <string name="data_si_ora">Data si ora:</string>
    <string name="sala">Sala:</string>
    <string name="nume_profesor">Nume profesor:</string>
    <string name="nametextview">nameTextView</string>
    <string name="datetime">datetime</string>
    <string name="name">name</string>
    <string name="classroom">classroom</string>
    <string name="exam">Exam</string>
    <string name="send">Send</string>
    <string name="introdu_mesajul_tau">Introdu mesajul tau</string>
    <string name="Profil">Profil</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="day_name_placeholder">Luni</string>
    <string name="week_number_placeholder">Saptamana 27</string>
    <string name="Welcome">Welcome</string>
    <string name="Unitbv">UNITBV</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="input_error_name">Name required</string>
    <string name="input_error_email">Email required</string>
    <string name="input_error_password">Eassword required</string>
    <string name="input_error_password_length">Password should be at least 6 characters long</string>
    <string name="input_error_email_invalid">Enter a valid email</string>
    <string name="registration_success">Registered Successfully</string>

</resources>